# rmenu

./: .gitignore  Cargo.toml  README.md  build.rs  rmenu.man
src/: args.rs  main.rs  programs.rs
