[package]
name = "rmenu"
version = "0.1.0"
authors = ["Knarkzel <knarkzel@knarkzel.xyz>"]
edition = "2018"
license = "GPL v2"
readme = "README.md"
description = "dmenu in Rust, made for Redox"
repository = "https://gitlab.com/knarkzel/rmenu"
keywords = ["dmenu", "rust", "redox"]
categories = ["redox"]

[dependencies]
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch = "develop" }
walkdir = "2"
pico-args = "0.4"
atty = "0.2"

[build-dependencies]
man = { git = "https://github.com/Knarkzel/man", branch = "master" }

[[bin]]
name = "rmenu"
path = "src/main.rs"
